--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
     margin-bottom: 1.2rem;
     font-size: 1.6rem;
     font-weight: 800;
+    position:relative;
 }
 .headings-edu{
     padding-top: 4rem;
@@ -78,6 +79,7 @@ body{
     margin-bottom: 1.2rem;
     font-size: 1.6rem;
     font-weight: 800;
+    position:relative;
 }
 .heading  {
     
