--- a/style.css
+++ b/style.css
@@ -181,6 +181,11 @@ body{
     font-size: 1.3rem;
     color: #2D9CDB;
 }
+.icon{
+    padding-right: 1.2rem;
+    font-size: 1.2rem;
+    color: #2D9CDB;
+}
 
 .fadeinleft {
     opacity: 0;
